working login and register
